# ContigNet

./: .gitignore  ContigNet.py  MANIFEST.in  README.md  feature_extractor.py  final_model  model  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  train_model.py
.github/workflows/: ContigNet.yml  tests.yml
ContigNet/: ContigNet.py  __main__.py  util.py
demo/virus_fasta/: AB024414.fasta  AB027020.fasta  AB027021.fasta  AB032553.fasta  AB042808.fasta  AB050936.fasta
scripts/: feature_extractor.py
src/ContigNet/: VirusCNN_siamese.py  __init__.py  __main__.py  util.py
src/ContigNet/demo/host_fasta/: GCF_000007845.1_ASM784v1_genomic.fna
src/ContigNet/demo/virus_fasta/: AB024414.fasta
src/ContigNet/models/: model.dict
tests/: test_ContigNet.py
training/: README.md  VirusCNN_siamese.py  test.py  train_model.py
training/scripts/: carc_preprocess_routine.sh  cdhit.job  fasta_to_onehot.py  ftp_links.txt  generate_host_link_txt.py  generate_virhost_pair_cdhit.py  split_virus_fasta.py
