[metadata]
name = ContigNet
version = 1.0.0
author = Tianqi Tang
author_email = tianqit@usc.edu

[options]
python_requires = >=3.6
packages = find:
install_requires =
    numpy
    scipy
    scikit-learn
    torch
    torchvision
    tqdm
    matplotlib
    pandas
    seaborn
    pyyaml
    tensorboard
    tensorboardX
    h5py