[metadata]
name = ContigNet
description = ContigNet, a deep learning based phage-host interaction prediction tool
version = 1.0.1
author = Tianqi Tang
author_email = tianqit@usc.edu
platforms = any
license = USC-RL v1.0
license_file = LICENSE
url = https://github.com/tianqitang1/ContigNet
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: University of Southern California Research License v1.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
packages = find:
install_requires =
    numpy
    scipy
    scikit-learn
    torch
    torchvision
    tqdm
    matplotlib
    pandas
    seaborn
    pyyaml
    tensorboard
    h5py
    ete3
    biopython