[metadata]
name = ContigNet
description = ContigNet, a deep learning based phage-host interaction prediction tool
version = 1.0.1.1
author = Tianqi Tang
author_email = tianqit@usc.edu
platforms = any
license = USC-RL v1.0
license_file = LICENSE
url = https://github.com/tianqitang1/ContigNet
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
packages = find:
install_requires =
    numpy
    scipy
    scikit-learn
    torch
    tqdm
    matplotlib
    pandas
    seaborn
    pyyaml
    tensorboard
    h5py
    ete3
    biopython
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.entry_points]
console_scripts =
    ContigNet = ContigNet.__main__:main

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160
exclude = 
    5yr
    training

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
ignore_missing_imports_per_module = True
warn_unused_ignores = True
